# smb_ros2_workspace

./: .gitignore  .tmux.conf  convert_bag.py  gitman.yml  plot_data.py  see_centroids.py  tare_config.yaml
.devcontainer/: devcontainer.json
four_now/: CMakeLists.txt  package.xml
four_now/src/: navigate_detect.cpp
scripts/: smb_bashrc.sh
scripts/config/: fastdds-config.xml
src/4now/: CMakeLists.txt  package.xml
src/4now/src/: navigate_detect.cpp
src/core/smb_bringup_custom/: package.xml  setup.cfg  setup.py
src/core/smb_bringup_custom/launch/: TODO_STUDENTS_smb_real.launch.py
src/custom/four_now/: package.xml  setup.cfg  setup.py
src/custom/four_now/four_now/: give_up_exploration_node.py  map_save.py  move_a_bit_node.py  robot_to_map_node.py  robot_to_map_service.py  save_map_node.py  waypoint_publisher.py
src/custom/four_now/launch/: bringup_custom.launch.py  build_map.launch.py  chair_finder.launch.py  debug_real.launch.py  exploration.launch.py  far_rviz.launch.py  give_up_exploration.launch.py  map_save.launch.py  move_a_bit.launch.py  nuc_all.launch.py  object_detection.launch.py  odom_and_slam.launch.py  robot_to_map.launch.py  save_map.launch.py  sensors_and_lowlevel.launch.py
src/custom/four_now/src/: waypoint_publisher.py
src/custom/four_now/src/four_now/: navigate_detect.py
src/custom/four_now/worlds/: testsite.world
src/planning/: tare_planner
