<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>four_now</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tsikelis.i@protonmail.com">itsikelis</maintainer>
  <license>BSD-2-Clause</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <depend>smb_bringup</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
